RESOLVED FIXED210631
GetTypedArrayByteOffset is broken on arm64e
https://bugs.webkit.org/show_bug.cgi?id=210631
Summary GetTypedArrayByteOffset is broken on arm64e
Saam Barati
Reported 2020-04-16 19:11:32 PDT
- We compare against 0 instead of the "null" signed vector
Attachments
patch (8.75 KB, patch)
2020-04-16 19:26 PDT, Saam Barati
mark.lam: review+
patch for landing (7.99 KB, patch)
2020-04-17 11:00 PDT, Saam Barati
no flags
patch for landing (7.99 KB, patch)
2020-04-17 11:00 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2020-04-16 19:26:30 PDT
Mark Lam
Comment 2 2020-04-16 19:43:53 PDT
Comment on attachment 396733 [details] patch r=me
Saam Barati
Comment 3 2020-04-17 08:58:43 PDT
Seems like my change breaks byteOffset in C++. Question is: is that same branch also broken in JITCode or is DataView unreachable?
Saam Barati
Comment 4 2020-04-17 10:57:14 PDT
(In reply to Saam Barati from comment #3) > Seems like my change breaks byteOffset in C++. Question is: is that same > branch also broken in JITCode or is DataView unreachable? Yeah, not reachable.
Saam Barati
Comment 5 2020-04-17 11:00:04 PDT
Created attachment 396774 [details] patch for landing
Saam Barati
Comment 6 2020-04-17 11:00:58 PDT
Created attachment 396775 [details] patch for landing
EWS
Comment 7 2020-04-17 14:48:26 PDT
Committed r260289: <https://trac.webkit.org/changeset/260289> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396775 [details].
Radar WebKit Bug Importer
Comment 8 2020-04-17 14:49:16 PDT
Note You need to log in before you can comment on or make changes to this bug.