GetTypedArrayByteOffset is broken on arm64e https://bugs.webkit.org/show_bug.cgi?id=210631

Reviewed by Mark Lam.

JSTests:

* stress/byte-offset-on-wasteful-neutered-arm64e.js: Added.
(foo):
(assert):
(transferArrayBuffer.array.buffer):

Source/JavaScriptCore:

The vector of JSArrayBufferView is signed even when null on arm64e.  However, we were
comparing against zero, which is wrong. This patch changes it so we do the right thing
and instead compare against whatever constant (ptr=nullptr,size=0) signs as.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileGetTypedArrayByteOffset):
* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileGetTypedArrayByteOffset):
* runtime/CagedBarrierPtr.h:
(JSC::CagedBarrierPtr::rawBits const):
* runtime/JSArrayBufferView.h:
(JSC::JSArrayBufferView::nullVectorPtr):

Source/WTF:

* wtf/CagedPtr.h:
(WTF::CagedPtr::rawBits const):


Canonical link: https://commits.webkit.org/223554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260289 268f45cc-cd09-0410-ab3c-d52691b4dbfc