Source/JavaScriptCore/runtime/JSArrayBufferView.h
@@ -105,6 +105,12 @@ public:
 
     static constexpr unsigned fastSizeLimit = 1000;
     using VectorPtr = CagedBarrierPtr<Gigacage::Primitive, void, tagCagedPtr>;
+
+    static void* nullVectorPtr()
+    {
+        VectorPtr null { };
+        return null.rawBits();
+    }
     
     static size_t sizeOf(uint32_t length, uint32_t elementSize)
     {
